# python-netplan

./: .gitignore  pyproject.toml
netplan/: config.py
