[tool.poetry]
name = "netplan"
version = "0.5.0"
description = "A Python library for parsing the netplan configuration data."
authors = ["Zach Frichtl <zfrichtl@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "netplan" }]

[tool.poetry.scripts]
netplan-parser = 'bin/netplan-parser:main'

[tool.poetry.dependencies]
python = "^3.8.1"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
ddt = "^1.6.0"
flake8 = "^6.1.0"
black = "^23.9.0"
mypy = "^1.5.1"
os-testr = "^3.0.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
